# N-Core

./: .build.bat  .gitignore  CMakeLists.txt  game.cpp  game.h  main.cpp
level/: generator.cpp  generator.h  ladder.cpp  ladder.h  object.cpp  object.h  platform.cpp  platform.h  void.cpp  void.h
player/: player.cpp  player.h
scenes/: chapter_layout.cpp  chapter_layout.h  level.cpp  level.h  loading.cpp  loading.h  main_menu.cpp  main_menu.h  scene.cpp  scene.h
source/: fonts.cpp  fonts.h  level.cpp  level.h  loading.cpp  loading.h  main_menu.cpp  main_menu.h  music.cpp  music.h
utils/: button.cpp  button.h  numeric.cpp  numeric.h
